@@ -30,6 +30,9 @@
     <ClInclude Include="IndexBufferOGLvbo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TextureOGL.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RendererOGL.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="IndexBufferOGLvbo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TextureOGL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
